--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>crudEtudiants</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>demo</name>
+    <name>crudEtudiants</name>
     <packaging>war</packaging>
 
     <properties>
